fix dark mode

--- a/html/assets/css/main.css
+++ b/html/assets/css/main.css
@@ -28,6 +28,7 @@
     --lineColor: rgba(0,0,0,.1);
     --backgroundShadow: rgba(34,34,34,0.1);
 
+    /* Used by Radical Picker */
     --borderColor: var(--searchTextColor);
     --disabledColor: #BDBDBD;
 }
@@ -54,7 +55,7 @@
     --lineColor: rgba(211,207,201,0.1);
     --backgroundShadow: rgba(157,148,136,0.1);
 
-    --border-color: var(--itemBG_075);
+    --borderColor: var(--itemBG_075);
     --disabledColor: #3C3C3C;
 }
 
